tests/expected_output/assign_to_multidimensional_array/000000-clang-9.0-x86_64-pc-linux-gnu.txt
tests/extracted_compile_time_errors/assign_to_multidimensional_array.c:4:4: error: array type 'int [3][1]' is not assignable
        a = b;
        ~ ^
dcc explanation: you are trying to assign to 'a' which is an array.
  You can not assign to a whole array.
  You can use a nested loop to assign to each array element individually.
